tests/baselines/reference/unusedTypeParameterInFunction3.errors.txt
tests/cases/compiler/unusedTypeParameterInFunction3.ts(1,16): error TS6133: 'Y' is declared but never used.


==== tests/cases/compiler/unusedTypeParameterInFunction3.ts (1 errors) ====
    function f1<X, Y, Z>() {
                   ~
!!! error TS6133: 'Y' is declared but never used.
        var a: X;
        var b: Z;
        a;
        b;
    }